add jsonview, building updates, workorders focus

--- a/client/buildings.jade
+++ b/client/buildings.jade
@@ -58,34 +58,29 @@ template(name='buildings')
             
             
 template(name='view_building')
-    a.ui.basic.button(href='/buildings')
-        i.left.arrow.icon
-        |Buildings
-    with building
-        .ui.container
-            h1.ui.center.aligned.header Building #{building_code} Page
-            .ui.stackable.grid
+    with current_doc
+        .ui.padded.stackable.grid
+            .row
+                .four.wide.column
+                    a.ui.button(href='/buildings')
+                        i.left.arrow.icon
+                        |Buildings
+                .eight.wide.column
+                    h1.ui.center.aligned.header Building #{building_code} Page
+                .four.wide.column
+            .row
                 .ten.wide.column
                     .ui.dividing.header Notices
                     .ui.dividing.header Posts
                     .ui.dividing.header Maintenance Requests
                     .ui.dividing.header Residents
-            
-            
                 .six.wide.column
                     .ui.form
-                        .inline.field
-                            label Code
-                            .ui.basic.large.label #{building_code}
-                        .inline.field
-                            label Numbers
-                                each building_numbers
-                                    .ui.basic.large.label #{this}
-                        .inline.field
-                            label Street
-                            .ui.basic.large.label #{building_street}
+                        +text_view key='building_code' label='Code'
+                        +array_view key='building_numbers' label='Numbers'
+                        +text_view key='building_street' label='Street'
                     .ui.dividing.header
                         i.configure.icon
                         |Admin
-                    a.ui.basic.button(href="/building/edit/#{_id}") Edit Building
-                
+                    a.ui.button(href="/building/edit/#{_id}") Edit Building
+                    
