--- a/client/styles.css
+++ b/client/styles.css
@@ -22,6 +22,12 @@ body {
 }
 
 
+.inline {
+  display:inline !important;
+  margin: .5em !important;
+}
+
+
 .ui.header{
   font-family: 'Ubuntu', sans-serif !important;
 }
@@ -281,3 +287,37 @@ a {
 .topnav::-webkit-scrollbar {
     display: none;
 }
+
+.f10 {
+  font-size: 200%;
+  line-height: 120%;
+  margin-bottom: 10px; }
+.f9 {
+  font-size: 180%;
+  line-height: 120%;
+  margin-bottom: 5px; }
+.f8 {
+  font-size: 160%;
+  line-height: 160%; }
+.f7 {
+  font-size: 140%;
+  line-height: 140%; }
+.f6 {
+  font-size: 120%;
+  line-height: 120%; }
+.f5 {
+  font-size: 110%;
+  line-height: 110%; }
+.f4 {
+  font-size: 100%;
+  line-height: 100%; }
+.f3 {
+  font-size: 90%;
+  line-height: 90%; }
+.f2 {
+  font-size: 70%;
+  line-height: 70%; }
+.f1 {
+  font-size: 50%;
+  line-height: 50%; }
+.f0 { display:none; }
