--- a/client/fields.jade
+++ b/client/fields.jade
@@ -546,7 +546,7 @@ template(name='single_doc_edit')
         .ui.small.button.select_choice(class=choice_class)
             if icon
                 i.grey.icon(class=icon)
-            |#{label}
+            |#{button_label}
 
 
 template(name='multi_doc_edit')
