fields update, single user, single doc, user lookup methods

--- a/client/buildings.jade
+++ b/client/buildings.jade
@@ -4,6 +4,7 @@ template(name='building_edit')
             .ui.header Edit Building
             .ui.form
                 +text_edit key='building_code' label='Building Code'
+                +text_edit key='slug' label='Slug'
                 .field
                     label Building Numbers
                     .ui.divided.list
