--- a/client/user_table.jade
+++ b/client/user_table.jade
@@ -1,7 +1,7 @@
 template(name='user_table')
-    //- a#add_user.ui.button(href='/user/add')
-    //-     i.plus.icon
-    //-     |Add User
+    a#add_user.ui.button(href='/user/add')
+        i.plus.icon
+        |Add User
     table.ui.sortable.striped.table
         thead
             tr
