--- a/client/fields.jade
+++ b/client/fields.jade
@@ -374,16 +374,16 @@ template(name='datetime_view')
 
 
 template(name='array_edit')
-    .ui.form
-        .field
-            label 
-                if icon
-                    i.grey.icon(class=icon)
-                if label
-                    |#{label}
-                else if key
-                    |#{key}
-            input.new_element(type='text' placeholder='+')
+    .ui.labeled.input
+        .ui.label
+            if icon
+                i.grey.icon(class=icon)
+            if label
+                |#{label}
+            else if key
+                |#{key}
+        input.new_element(type='text' placeholder='+')
+    div
     if field_value
         each field_value
             .ui.large.label
@@ -508,7 +508,7 @@ template(name='youtube_view')
 
 template(name='boolean_edit')
     div
-    .ui.inline.small.header
+    .ui.inline.small.grey.header
         if icon
             i.grey.icon(class=icon)
         | #{label}
@@ -520,11 +520,12 @@ template(name='boolean_edit')
 
 
 template(name='boolean_view')
-    .ui.header #{label}
+    div
+    .ui.small.inline.grey.header #{label}
     if field_value
-        |Yes
+        .ui.basic.green.label Yes
     else
-        |No
+        .ui.basic.label No
 
 template(name='single_doc_view')
     if icon
@@ -538,7 +539,7 @@ template(name='single_doc_view')
 
 
 template(name='single_doc_edit')
-    .ui.small.header(title=key) 
+    .ui.small.inline.grey.header(title=key) 
         if icon
             i.grey.icon(class=icon)
         |#{label}
@@ -546,7 +547,7 @@ template(name='single_doc_edit')
         .ui.small.button.select_choice(class=choice_class)
             if icon
                 i.grey.icon(class=icon)
-            |#{button_label}
+            |#{calculated_label}
 
 
 template(name='multi_doc_edit')
@@ -597,34 +598,39 @@ template(name='multi_doc_view')
 
 template(name='single_user_edit')
     .ui.form
-        .field.attached
-            label #{key}
-            input#single_user_select_input(type='text' placeholder='Lookup User...')
-            each selections
-                .ui.large.label
-                    |#{username} #{profile.name}
-        if user_results
-            .ui.top.attached.segment
-                .ui.middle.aligned.selection.animated.list
-                    each user_results
-                        .select_user.item
-                            h5.ui.header
-                                img.ui.avatar.image(src="{{c.url profile.image_id width=100 height=100 gravity='face' crop='fill'}}")
-                                |#{username}
-        .field
+        .ui.small.grey.inline.header 
+            if icon
+                i.icon(class=icon)
+            |#{label}
+        unless field_value
+            .field
+                input#single_user_select_input(type='text' placeholder='Lookup User...')
+                each selections
+                    .ui.large.label
+                        |#{username} #{profile.name}
+            if user_results
+                .ui.top.attached.segment
+                    .ui.middle.aligned.selection.animated.list
+                        each user_results
+                            .select_user.item
+                                h5.ui.header
+                                    img.ui.avatar.image(src="{{c.url profile.image_id width=100 height=100 gravity='face' crop='fill'}}")
+                                    |#{username}
+        if field_value
             +user_info field_value
-            // .ui.list
-            //     each field_value
-            //         |#{this}
-            //         .item
-            //             .right.floated.content
-            //                 i.pull_user.remove.link.icon
-            //             .image
-            //                 img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
-            //             .content
-            //                 h4.ui.header
-            //                     |#{first_name} #{last_name}
-            //                     small @#{username}
+            .pull_user.ui.icon.button(title='Remove User')
+                i.remove.icon
+
+            //- |#{this}
+            //- .item
+            //-     .right.floated.content
+            //-         i.pull_user.remove.link.icon
+            //-     .image
+            //-         img.ui.avatar.image(src="{{c.url image_id width=100 height=100 gravity='face' crop='fill'}}")
+            //-     .content
+            //-         h4.ui.header
+            //-             |#{first_name} #{last_name}
+            //-             small @#{username}
 
 
 template(name='single_user_view')
