--- a/client/work_orders.jade
+++ b/client/work_orders.jade
@@ -15,17 +15,19 @@ template(name='work_order_edit')
                         .ui.header 
                             i.grey.marker.icon
                             |Location
-                        +single_doc_edit key='building_label' ref_schema='building' button_label='building_code' button_key='building_code' label='Building Label' icon='building'
-                        +text_edit key='building_label' label='Building Label' icon='building'
+                        +single_doc_edit key='building_code' ref_schema='building' button_label='building_code' button_key='building_code' label='Building Label' icon='building'
+                        //- +text_edit key='building_code' label='Building Label' icon='building'
                         +number_edit key='building_number' label='Building Number' icon='building'
                         +number_edit key='unit' label='Unit' icon='home'
                         +text_edit key='location' label='Location (other)'
                         
-                    +text_edit key='reported_by' label='Reported By' icon='user'
+                    //- +text_edit key='reported_by' label='Reported By' icon='user'
+                    +single_user_edit key='reported_by' label='Reported by Staff' icon='user'
                     +boolean_edit key='need_to_schedule' label='Need to Schedule with Resident' icon='calendar'
                     +boolean_edit key='key_on_file' label='Key on File' icon='key'
                     +textarea_edit key='notes' label='Notes'
                     +array_edit key='tags' label='Tags'
+                    +text_edit key='front_desk_staff' label='Front Desk Staff' icon='briefcase'
                     
                     .ui.secondary.segment
                         +boolean_edit key='complete' label='Complete' icon='checkmark'
@@ -51,22 +53,9 @@ template(name='work_orders')
                 
 template(name='work_order')
     .ui.fluid.card
-        if before_image_id
+        if image
             .image
-                .ui.shape
-                    .flip_shape.sides
-                        if before_image_id
-                            a.side.active
-                                .content
-                                    .ui.center.aligned.header Before
-                                .image
-                                    img.ui.image(src="{{c.url before_image_id width='400' height='400' crop='lpad' }}")
-                        if after_image_id
-                            a.side
-                                .content
-                                    .ui.center.aligned.header After
-                                .image
-                                    img.ui.image(src="{{c.url after_image_id width='400' height='400' crop='lpad' }}")
+                +image_view key='image'
         .content
             if complete
                 span.right.floated
@@ -77,21 +66,29 @@ template(name='work_order')
             .meta
                 i.location.arrow.icon
                 |#{location}
-            if due_date
-                span
-                    i.calendar.icon
-                    |#{due_date}
-            i.tags.icon
-            each tags
-                .ui.basic.label #{this}
-            if complete
-                |Completed by #{staff}
-                if complete_date
-                    |on #{complete_date}
-                if notes
-                    div
-                        i.edit.icon
-                        |#{notes}
+            +date_view key='date' label='Date'
+            +image_view key='image' label='Image'
+            .ui.secondary.segment
+                .ui.header 
+                    i.grey.marker.icon
+                    |Location
+                +single_doc_view key='building_code' ref_schema='building' button_label='building_code' button_key='building_code' label='Building Label' icon='building'
+                +text_view key='building_code' label='Building Label' icon='building'
+                +number_view key='building_number' label='Building Number' icon='building'
+                +number_view key='unit' label='Unit' icon='home'
+                +text_view key='location' label='Location (other)'
+                
+            +text_view key='reported_by' label='Reported By' icon='user'
+            +boolean_view key='need_to_schedule' label='Need to Schedule with Resident' icon='calendar'
+            +boolean_view key='key_on_file' label='Key on File' icon='key'
+            +textarea_view key='notes' label='Notes'
+            +array_view key='tags' label='Tags'
+            
+            .ui.secondary.segment
+                +boolean_view key='complete' label='Complete' icon='checkmark'
+                if complete
+                    +textarea_view key='work_completed' label='Work Completed' icon='checkmark'
+                    +date_view key='complete_date' label='Complete Date'
             a.ui.icon.button(href="/work_order/#{_id}/edit") 
                 i.pencil.icon
             //- a.ui.button(href="/work_order/#{_id}/view") 
