--- a/components/nav.jade
+++ b/components/nav.jade
@@ -19,7 +19,7 @@ template(name='nav')
             i.briefcase.icon
         a.icon.item(href='/work_orders' class="{{isActivePath '/work_orders'}}" title='Work Orders')
             i.tools.icon
-        a.mobile.hidden.item(href='/checkin' class="{{isActivePath '/checkin'}}" title='Health Club')
+        a.item(href='/checkin' class="{{isActivePath '/checkin'}}" title='Health Club')
             i.clinic.medical.icon
         if currentUser
             //- .ui.simple.dropdown.icon.item(href="/user/#{currentUser.username}/notifications" class="{{isActivePath '/messages'}}")
@@ -31,10 +31,10 @@ template(name='nav')
             a.icon.item(href="/user/#{currentUser.username}/messages" class="{{isActivePath '/messages'}}")
                 i.mail.icon
                 //- | mail
-            a.mobile.hidden.item(href='/admin' class="{{isActivePath '/admin'}}")
+            a.item(href='/admin' class="{{isActivePath '/admin'}}")
                 i.user.shield.icon
                 //- | admin
-            a.mobile.hidden.item(href="/user/#{currentUser.username}/view" class="{{isActiveRoute regex='user_chat'}}")
+            a.item(href="/user/#{currentUser.username}/view" class="{{isActiveRoute regex='user_chat'}}")
                 if currentUser.image_id
                     img.ui.avatar.image(src="{{c.url currentUser.image_id width=100 height=100 gravity='face' crop='fill'}}")
                 else
@@ -44,9 +44,8 @@ template(name='nav')
             //-     i.sign.out.icon
                 //- | Sign Out
         else
-            a.ui.mobile.hidden.item(href='/login') 
+            a.ui.item(href='/login' title='login') 
                 i.sign.in.icon
-                | log in
 
 
 template(name='sidebar')
